--- a/public/style.css
+++ b/public/style.css
@@ -1,35 +1,40 @@
-body {
-  width: 100%;
-  background-color: #34515e;
+* {
   margin: 0;
   padding: 0;
 }
 
+body {
+  width: 100vw;
+  background-color: #34515e;
+}
 
 #header {
-  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-content: center;
   align-items: center;
+}
+
+hr {
+  margin: 0px;
 }
 
 #title {
   color: #ffc107;
   font-size: 2rem;
-  text-align: center;
+  align-self: center;
   text-transform: uppercase;
 }
 
 #container {
-  margin: 0;
-  padding: 0;
+  padding: 10px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-content: center;
   align-items: center;
+  border: 1px solid white;
 }
 
 table {
@@ -39,8 +44,19 @@ table {
   color: white;
 }
 
-th, tr, td {
+th,
+tr,
+td {
   border: 1px solid white;
   text-align: center;
   padding: 10px;
+}
+
+button {
+  width: 90px;
+  height: 30px;
+}
+
+#sum {
+  color: white;
 }
